[package]
name = "since"
version = "0.11.1"
authors = ["Risto Puolakainen <rpuolak@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Small CLI utility to calculate time differences, with semantic UI for humans"
readme = "README.md"
homepage = "https://github.com/ryyst/since"
repository = "https://github.com/ryyst/since"
keywords = ["cli", "time", "datetime", "duration", "difference"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
clap = "2"

[profile.release]
panic = 'abort'
